# swagger-output.json
@@ -1485,6 +1485,26 @@
                 "message": {
                   "type": "string",
                   "example": "按讚成功"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "664c185bcd3fb..."
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "example"
+                      },
+                      "photo": {
+                        "type": "string",
+                        "example": "圖片連結(https)"
+                      }
+                    }
+                  }
                 }
               },
               "xml": {
@@ -1607,6 +1627,43 @@
                 "message": {
                   "type": "string",
                   "example": "新增成功"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "664c185bcd3fb..."
+                      },
+                      "comment": {
+                        "type": "string",
+                        "example": "example"
+                      },
+                      "post": {
+                        "type": "string",
+                        "example": "664c185bcd3fb..."
+                      },
+                      "user": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "example": "664c185bcd3fb..."
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "example"
+                          },
+                          "photo": {
+                            "type": "string",
+                            "example": "圖片連結(https)"
+                          }
+                        }
+                      }
+                    }
+                  }
                 }
               },
               "xml": {
